--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,7 @@
-spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
+spring.datasource.url=jdbc:mysql://containers-us-west-123.railway.app:12345/expense_db
+spring.datasource.username=root
+spring.datasource.password=Mysql@2003
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-server.port=${PORT:8080}
-
-server.error.include-message=always
-server.error.include-binding-errors=always
-
-# Active profile
-spring.profiles.active=${SPRING_PROFILE:default}
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
