--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-server.port=8080
+server.port=${PORT:8080}
